# xdg-desktop-portal-bypass

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/dbus_listener/: mod.rs  remote_desktop_listener.rs  screen_cast_listener.rs
src/event_handler/: mod.rs  remote_desktop.rs
src/event_handler/events/: mod.rs  remote_desktop.rs  screen_cast.rs
src/event_handler/proxy/: mod.rs  remote_desktop.rs  screen_cast.rs
src/event_handler/server/: remote_desktop.rs
